Finish the lambda implementation