@@ -5,11 +5,11 @@ import com.google.errorprone.VisitorState;
 import com.sun.source.tree.ExpressionTree;
 import com.sun.source.tree.MethodInvocationTree;
 import com.sun.source.util.TreePath;
-import com.sun.tools.javac.api.JavacTrees;
 import com.sun.tools.javac.code.Symbol;
 import com.sun.tools.javac.code.Type;
 import com.sun.tools.javac.tree.JCTree;
 import com.sun.tools.javac.tree.TreeInfo;
+import io.github.holo314.coeffect.compiletime.annotations.UseInplace;
 import io.github.holo314.coeffect.compiletime.annotations.WithContext;
 import io.github.holo314.coeffect.runtime.Coeffect;
 
@@ -18,42 +18,40 @@ import javax.lang.model.type.TypeMirror;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static io.github.holo314.coeffect.compiletime.plugin.TreeUtils.getAbstractMethodFromSAMInterface;
+
 public record CoeffectPath(
         ExpressionTree expressionTree,
-        Set<Type> binds,
-        JCTree.JCMethodDecl enclosingMethod,
-        VisitorState visitorState
+        Set<String> explicitlyBounded,
+        Set<String> enclosingBounds,
+        Set<String> requirements
 ) {
-    public Collection<String> getRequirements() {
-        Set<String> required = switch (expressionTree) {
+    public Collection<String> getMissingRequirements() {
+        var bounds = Sets.union(explicitlyBounded, enclosingBounds);
+        return Sets.difference(requirements, bounds);
+    }
+
+    public static CoeffectPath of(ExpressionTree expressionTree, VisitorState visitorState) {
+        var invokedPath = visitorState.getPath();
+        var enclosingBounds = getEnclosingBounds(invokedPath);
+
+        var coeffectClause = getCoeffectClause(invokedPath);
+        var explicitlyBounded = coeffectClause.stream()
+                .map(CoeffectPath::extractCarrierContext)
+                .flatMap(Collection::stream)
+                .map(Type::toString)
+                .collect(Collectors.toSet());
+
+        var requirements = extractRequirements(expressionTree);
+        return new CoeffectPath(expressionTree, explicitlyBounded, enclosingBounds, requirements);
+    }
+
+    public static Set<String> extractRequirements(ExpressionTree expressionTree) {
+        return switch (expressionTree) {
             case MethodInvocationTree methodInv -> extractMethodRequirements(methodInv);
             case JCTree.JCMemberReference referenceTree -> extractReferenceRequirements(referenceTree);
             case null, default -> Set.of();
         };
-
-
-        var enclosingBinding = enclosingMethod == null ?
-                               Set.of() : // Inside a static block
-                               getContextOfSymbol(TreeInfo.symbolFor(enclosingMethod));
-        var bounds = Sets.union(
-                binds.stream()
-                     .map(Type::toString)
-                     .collect(Collectors.toSet()),
-                enclosingBinding
-        );
-
-        return Sets.difference(required, bounds);
-    }
-
-    public static CoeffectPath of(ExpressionTree expressionTree, VisitorState visitorState, JavacTrees javacTrees) {
-        var invokedPath = visitorState.getPath();
-        var binds = new ArrayList<Type>();
-        var enclosingOfTree = getEnclosingOfTree(invokedPath, binds, javacTrees);
-        var coeffectClause = getCoeffectClause(invokedPath);
-        var carried = coeffectClause.stream().map(CoeffectPath::extractCarrierContext)
-                                    .flatMap(Collection::stream)
-                                    .collect(Collectors.toSet());
-        return new CoeffectPath(expressionTree, carried, enclosingOfTree, visitorState);
     }
 
     public static Set<Type> extractCarrierContext(Type carrier) {
@@ -61,64 +59,54 @@ public record CoeffectPath(
             return Set.of();
         }
         var result = new HashSet<Type>();
-        List<Type> args;
-        while (!((args = carrier.getTypeArguments()).get(1) instanceof Type.WildcardType)
-                && !(args.get(1) instanceof Type.CapturedType)) {
-            result.add(args.get(0));
-            carrier = args.get(1);
+        for (var args = carrier.getTypeArguments();
+             !args.getFirst().toString().equals(Void.class.getCanonicalName());
+             args = args.getLast().getTypeArguments()) {
+            result.add(args.getFirst());
         }
+
         return result;
     }
 
     public static Set<Type> getCoeffectClause(TreePath path) {
         var result = new HashSet<Type>();
-        for (; !(path.getLeaf() instanceof JCTree.JCMethodDecl); path = path.getParentPath()) {
-            if (path.getLeaf() instanceof JCTree.JCMethodInvocation inv
+        while (true) {
+            var leaf = path.getLeaf();
+            if (leaf instanceof JCTree.JCMethodDecl || leaf instanceof JCTree.JCClassDecl)
+                return result;
+
+            if (leaf instanceof JCTree.JCMethodInvocation inv
                     && inv.getMethodSelect() instanceof JCTree.JCFieldAccess access
                     && access.selected.type.tsym.toString().equals(Coeffect.Carrier.class.getCanonicalName())
                     && (access.name.contentEquals("call") || access.name.contentEquals("run"))) {
                 result.add(access.selected.type);
             }
-        }
 
-        return result;
-    }
-
-    public static void addWithes(JCTree.JCFieldAccess access, ArrayList<Type> acc) {
-        if (access.selected instanceof JCTree.JCMethodInvocation innerInv // the "with" invocation
-                && innerInv.type.tsym.toString().equals(Coeffect.Carrier.class.getCanonicalName())
-                && innerInv.getMethodSelect() instanceof JCTree.JCFieldAccess innerAccess // the "with" field access
-                && innerAccess.name.contentEquals("with")) {
-
-            if (innerInv.getArguments().size() == 1) {
-                acc.add(innerInv.getArguments().getFirst().type);
-            } else {
-                acc.add(innerInv.getArguments().get(1).type.getTypeArguments().getFirst());
-            }
-
-            addWithes(innerAccess, acc);
-        }
-    }
-
-    public static JCTree.JCMethodDecl getEnclosingOfTree(TreePath path, final ArrayList<Type> acc, JavacTrees javacTrees) {
-        while (true) {
-            var leaf = path.getLeaf();
-            if (leaf instanceof JCTree.JCMethodDecl methodDecl) return methodDecl;
-            if (leaf instanceof JCTree.JCLambda lambdaDecl) {
-                return LambdaUtils.getMethodDefinitionFromLambda(lambdaDecl, javacTrees);
-            }
-
-            if (leaf instanceof JCTree.JCMethodInvocation inv
-                    && inv.getMethodSelect() instanceof JCTree.JCFieldAccess access) {
-                addWithes(access, acc);
-            }
             path = path.getParentPath();
-            if (path == null) {
-                return null;
-            }
         }
+    }
 
-//        return (JCTree.JCMethodDecl)leaf;
+
+    public static Set<String> getEnclosingBounds(TreePath path) {
+        return switch (path.getLeaf()) {
+            case JCTree.JCBlock blockDecl when blockDecl.isStatic() -> Set.of(); // static init block
+            case JCTree.JCClassDecl classDecl -> // handle init block as a part of the constructor
+                    getContextOfSymbol(TreeUtils.getConstructorFromClassDecl(classDecl).sym);
+            case JCTree.JCMethodDecl methodDecl -> getContextOfSymbol(methodDecl.sym);
+            case JCTree.JCLambda lambdaDecl -> {
+                if (path.getParentPath().getLeaf() instanceof JCTree.JCMethodInvocation methodInvocation &&
+                        methodInvocation.getMethodSelect() instanceof JCTree.JCFieldAccess fieldAccess &&
+                        fieldAccess.sym instanceof Symbol.MethodSymbol methodSymbol &&
+                        methodSymbol.getAnnotation(UseInplace.class) != null &&
+                        TreeUtils.lambdaRunsInEnclosingMethod(lambdaDecl, methodInvocation, methodSymbol)) {
+                    yield getEnclosingBounds(path.getParentPath());
+                }
+                yield getContextOfSymbol(getAbstractMethodFromSAMInterface(lambdaDecl));
+            }
+            case null ->
+                    throw new IllegalStateException("Coeffect detected an unexpected type graph, please report a bug to the Coeffect git repository");
+            default -> getEnclosingBounds(path.getParentPath());
+        };
     }
 
     public static Set<String> extractReferenceRequirements(JCTree.JCMemberReference referenceTree) {
@@ -126,7 +114,7 @@ public record CoeffectPath(
     }
 
     public static Set<String> extractMethodRequirements(MethodInvocationTree methodInv) {
-        var methodTree = (JCTree)methodInv.getMethodSelect();
+        var methodTree = (JCTree) methodInv.getMethodSelect();
         var methodSymbol = TreeInfo.symbol(methodTree);
         var requiredContext = getContextOfSymbol(methodSymbol);
         var additionalContext = extractUsedContext(methodInv, methodTree);
@@ -138,7 +126,7 @@ public record CoeffectPath(
     }
 
     /**
-     * @return The fully qualified name of the parameter inside of "Coeffect.get(...)". For methods that are not
+     * @return The fully qualified name of the parameter inside "Coeffect.get(...)". For methods that are not
      * "Coeffect.get(...)" return an empty list, and for non-Class-literal invocation of "Coeffect.get(...)" return null.
      */
     public static Set<String> extractUsedContext(MethodInvocationTree methodInv, JCTree methodTree) {
@@ -149,7 +137,7 @@ public record CoeffectPath(
         var selected = fieldAccess.selected;
         var parentType = selected.type;
         if (!parentType.toString()
-                       .equals(Coeffect.class.getCanonicalName())
+                .equals(Coeffect.class.getCanonicalName())
                 || !fieldAccess.name.contentEquals("get")) {
             return Set.of();
         }
